@startuml Prinzo

skinparam linetype ortho

entity Agencia {
  + agencia_id : int (PK)
}

entity Vehiculo {
  + vehiculo_id : int (PK)
  --
  marca : string
  modelo : string
  patente : string
}

entity Cliente {
  + cliente_id : int (PK)
  --
  nombre : string
  apellido : string
  dni : string
  fechaNacimiento : Date
  correoElectronico : string
}

entity Alquiler {
  + alquiler_id : int (PK)
  --
  dias : int
  importe : double
}

Agencia "1" ||--o{ "0..*" Vehiculo : tiene
Agencia "1" ||--o{ "0..*" Cliente : tiene
Cliente "0..*" }o--|| "0..*" Alquiler : alquila
Vehiculo "0..*" }o--|| "0..*" Alquiler : es alquilado

@enduml
